# agentdispatch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json  playwright.config.js
e2e/: activity-dot.test.js  altscreen-keys.test.js  altscreen-mouse.test.js  altscreen-reconnect.test.js  altscreen.test.js  build-transition.test.js  capture-fallback.test.js  claude-reconnect.test.js  claude-redraw.test.js  claude-scroll-jump.test.js  git-checkbox.test.js  helpers.js  launch.test.js  mouse-wheel.test.js  pane-exit.test.js  pane-resize.test.js  pane-title.test.js  reconnect-scroll.test.js  scroll-isolation.test.js  scroll.test.js  scrollback-clear.test.js  stash-resize.test.js  sync-scroll.test.js  viewport.test.js  workspace-reorder.test.js
plans/: persistent-server.md
src/: db.rs  main.rs  projects.rs  terminal.rs  tmux.rs  tmux_cc.rs  web.rs
static/: app.js  app.test.js  default-bash.sh  default-build.sh  index.html
