[package]
name = "agentdispatch"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-util", "sync"] }
actix-ws = "0.3"
nix = { version = "0.29", features = ["term", "signal", "inotify"] }
rand = "0.9"
